--- a/theory.tex
+++ b/theory.tex
@@ -1255,8 +1255,7 @@ A related concept is the \textit{hyperlens}\index{hyperlens}, an inhomogeneous s
 
 The problems of dissipative losses in resonant periodic structures were not sufficiently overcome yet. Some quantitative improvements can be easily done, namely thickening the metallic structures and increasing the inductance-to-capacitance ratios of the split-ring resonators (SRR) \cite{zhou2008efficient}. At the near-infrared and optical wavelengths, SRRs are overcome by perforated metallic sheets, so called \textit{fishnets}\index{metamaterial!fishnet}, % todo cite 
 and it may be favorable to substitute metals with certain types of oxides with metallic-like permittivity in the optical range \cite{naik2011oxides}.
-
-To the author's knowledge, all demonstrations of metamaterial sub-wavelength imaging demonstrated so far were therefore either only proof-of-concept, microscopic devices, or were limited to the easier accessible microwave region. % (verify there is no breakthrough in the IR lately?)
+To the author's knowledge, all demonstrations of metamaterial sub-wavelength imaging were so far either only proof-of-concept, microscopic devices, or were limited to the easier accessible microwave region. % (verify there is no breakthrough in the IR lately?)
 %The question remains whether the significant progress of technology required to fabricate suitable deeply sub-wavelength structures does not also eliminate their need, by simultaneously providing much better detectors operating in the near field.
 
 %}}}
