--- a/title.tex
+++ b/title.tex
@@ -93,13 +93,13 @@ Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, com
 \chapter*{Abstrakt}
 \noindent ~
 % TODO přeložit
-Při interakci elektromagnetických vln s periodickými strukturami lze pozorovat neobvyklé jevy, jako je záporný index lomu, fotonický zakázaný pás nebo silná prostorová disperze. Tyto struktury mohou být navrženy tak, aby se chovaly žádoucím způsobem, a označují se buďto jako metamateriály nebo jako fotonické krystaly. Část z jejich navrhovaných využití je v technice terahertzových vln, kde můžou překlenout poměrně slabé možnosti klasických součástek.  
+Při interakci elektromagnetických vln s periodickými strukturami lze pozorovat neobvyklé jevy, jako je záporný index lomu, fotonický zakázaný pás nebo silná prostorová disperze. Tyto struktury mohou být navrženy tak, aby se chovaly žádoucím způsobem, a označují se buďto jako metamateriály nebo jako fotonické krystaly. Část z jejich navrhovaných využití je v technice terahertzových vln, kde můžou překlenout po\-měr\-ně slabé možnosti klasických součástek.  
 
 Teoretický základ práce vychází z elektrodynamiky prostředí s klasickou frekvenční disperzí, která je dále zobecněna na prostředí s prostorovou disperzí a na Blochovu-Floquetovu teorii vln v periodických strukturách. Závěr teoretické části se pokouší vyjasnit pojmy používané v literatuře a ukázat, že myšlenky metamateriálů i fotonických krystalů jsou ve skutečnosti starší, než se často uvádí.
 
 Obecná teorie je doplněna příklady terahertzového chování různorodých periodických struktur, které bylo vypočteno metodou konečných diferencí v časové doméně (FDTD). V některých případech byly její výsledky podloženy jinými simulačními algoritmy nebo měřeními pomocí terahertzové spektroskopie v časové doméně.
 
-Srovnání  různých struktur si klade za cíl srozumitelnou formou prezentovat a vysvětlit nejpodstatnější principy. Podobné srovnání zřejmě v dosavadní literatuře chybělo. Klíčové výsledky spočívají v popisu přechodu mezi režimy metamateriálu a fotonického krystalu v periodickém poli dielektrických tyčinek a v důkazech toho, že k popisu chování řady uvedených struktur je zcela nezbytné uvažovat prostorovou dispersi. V neposlední řadě práce dokládá možnosti simulačních skriptů, které autor vyvinul a uveřejnil na internetu s úmyslem podpořit další výzkum v této oblasti. 
+Srovnání  různých struktur si klade za cíl srozumitelnou formou prezentovat a vy\-svět\-lit nej\-pod\-stat\-něj\-ší principy. Podobné srov\-nání zřejmě v dosavadní literatuře chy\-bě\-lo. Klíčové vý\-sledky spočí\-vají v popisu přechodu mezi režimy metamateriálu a fotonického krystalu v periodickém poli dielektrických tyčinek a v důkazech toho, že k popisu chování řady uvedených struktur je zcela nezbytné uvažovat prostorovou dispersi. V neposlední řadě práce dokládá možnosti simulačních skriptů, které autor vyvinul a uveřejnil na internetu s úmyslem podpořit další výzkum v této oblasti. 
 
 \vspace{0mm}
 %\chapter*{Abstract} 
