--- a/t.tex
+++ b/t.tex
@@ -1,8 +1,9 @@
 \documentclass[a4paper,12pt]{report}
 \usepackage[utf8]{inputenc} 
-%\usepackage[top=3.5cm, bottom=3cm, left=3.cm, right=3.cm]{geometry} % a bit wider margins
 %\usepackage[top=3cm, bottom=3cm, left=2.5cm, right=2.5cm]{geometry} 
-\usepackage[top=3cm, bottom=3cm, left=.5cm, right=.5cm, paperwidth=17.0cm, paperheight=29.7cm]{geometry}  %% DEBUG
+%\usepackage[top=3cm, bottom=3cm, inner=2.cm, outer=3.0cm, twoside]{geometry}  % two-sided print
+\usepackage[top=3cm, bottom=3cm, inner=2.2cm, outer=3.4cm, twoside]{geometry}  % two-sided print with larger margins
+%\usepackage[top=3cm, bottom=3cm, left=.5cm, right=.5cm, paperwidth=17.0cm, paperheight=29.7cm]{geometry}  %% DEBUG
 \usepackage{mathrsfs} 
 \usepackage{palatino} 
 \usepackage[font=it]{caption}
@@ -101,6 +102,7 @@
 
 \label{enddocument} 
 \end{document}
+
 
 
 
