fdphd.bib rm accented i was in fact imaginary unit

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1492,7 +1492,7 @@ Ref. [24]
 }
 @article{navarro2011dual,
   title={Dual-band double-negative-index fishnet metamaterial at millimeter-waves},
-  author={Navarro-C{\'\i}a, Miguel and Garc{\'\i}a-Meca, Carlos and Beruete, Miguel and Mart{\'\i}nez, Alejandro and Sorolla, Mario},
+  author={Navarro-C{\'i}a, Miguel and Garc{\'i}a-Meca, Carlos and Beruete, Miguel and Mart{\'i}nez, Alejandro and Sorolla, Mario},
   journal={Opt. Lett.},
   volume={36},
   number={21},
@@ -1609,7 +1609,7 @@ Ref. [24]
 }
 @article{navarro2011dual,
   title={Dual-band double-negative-index fishnet metamaterial at millimeter waves},
-  author={Navarro-C{\'\i}a, Miguel and Garc{\'\i}a-Meca, Carlos and Beruete, Miguel and Mart{\'\i}nez, Alejandro and Sorolla, Mario},
+  author={Navarro-C{\'i}a, Miguel and Garc{\'i}a-Meca, Carlos and Beruete, Miguel and Mart{\'i}nez, Alejandro and Sorolla, Mario},
   journal={Opt. Lett.},
   volume={36},
   number={21},
