--- a/title.tex
+++ b/title.tex
@@ -9,7 +9,7 @@ Faculty of Nuclear Sciences and Physical Engineering\\
 \includegraphics[width=5cm]{img/LogoCVUT}
 \vspace{2cm}
 
-\huge{\textbf{\scshape Dissertation thesis}}\\
+\huge{\textbf{\scshape Doctoral thesis}}\\
 \vspace{5mm}
 {\LARGE\textbf{Metamaterials for the terahertz spectral range\\}}
 \end{center}
@@ -19,14 +19,14 @@ Faculty of Nuclear Sciences and Physical Engineering\\
 
  \vfill
 \begin{minipage}{.99\textwidth}
-\Large{\textbf{Prague 2016}} \hfill \Large{\textbf{Filip Dominec}}
+\Large{\textbf{Prague 2016}} \hfill \Large{\textbf{Ing. Filip Dominec}}
 \end{minipage}
 
 
-\thispagestyle{empty} \newpage ~ \thispagestyle{empty} \newpage \setcounter{page}{2}
+\thispagestyle{empty} \newpage ~ \thispagestyle{empty} \newpage \setcounter{page}{1}
 
 % --------------------------------------------------------------------------------
-\chapter*{Bibliografický záznam}
+{\let\clearpage\relax\chapter*{Bibliografický záznam}}
  %\begin{tabular}{rl}
  %Author: 	&\textbf{Filip Dominec}\\
  %Advisor: 	&\textbf{Mgr. Filip Kadlec, Dr.}\\
@@ -35,7 +35,7 @@ Faculty of Nuclear Sciences and Physical Engineering\\
  %\end{tabular}
 
 \bgroup \def\arraystretch{1.5}
-\noindent\begin{tabular}{p{.25\linewidth}p{.7\linewidth}}
+\noindent\begin{tabular}{p{.30\linewidth}p{.65\linewidth}}
 	Autor:				&\textbf{Ing. Filip Dominec} \\ 
 					~	&České vysoké učení technické v Praze\\ 
 					~	&Fakulta jaderná a fyzikálně inženýrská\\  
@@ -56,41 +56,37 @@ Klíčová slova			&\textbf{metamateriály, fotonické krystaly, terahertzová t
 \end{tabular}
 \egroup
 
-\thispagestyle{empty} \newpage ~ \thispagestyle{empty} \newpage \setcounter{page}{3}
+\thispagestyle{empty} \newpage ~ \thispagestyle{empty} \newpage \setcounter{page}{1}
 
 % --------------------------------------------------------------------------------
-\chapter*{Bibliographic entry}
+{\let\clearpage\relax\chapter*{Bibliographic entry}}
 \bgroup \def\arraystretch{1.5}
-\noindent\begin{tabular}{p{.25\linewidth}p{.7\linewidth}}
+\noindent\begin{tabular}{p{.30\linewidth}p{.65\linewidth}}
 Author:					&\textbf{Ing. Filip Dominec} \\
 					~	&Czech Technical University in Prague\\
 					~	&Faculty of Nuclear Sciences and Physical Engineering\\ 
 					~	&Department of Physical Electronics\\
 Title of Dissertation:	&\textbf{Metamaterials for the terahertz spectral range} \\
-Degree Programme:		&\textbf{Application of natural sciences} \\
+Degree Programme:		&\textbf{Applications of natural sciences} \\
 Field of Study:			&\textbf{Physical engineering} \\
 Supervisor:				&\textbf{Mgr. Filip Kadlec, Dr.} \\
 					~	&Institute of Physics\\ 
 					~	&Academy of Sciences of the Czech Republic\\  %Na Slovance 2,  182 21 Praha 8, Czech Republic 
-Supervisor specialist:	&\textbf{Doc. Ing. Ivan Richter, Dr.} \\
+Supervisor specialist:	&\textbf{doc. Ing. Ivan Richter, Dr.} \\
 					~	&Czech Technical University in Prague\\ 
 					~	&Faculty of Nuclear Sciences and Physical Engineering\\  
 					~	&Department of Physical Electronics\\
-Academic Year:			&\textbf{2015/16} \\
+Academic Year:			&\textbf{2015/2016} \\
 Number of Pages:		&\textbf{\pageref{enddocument}} \\
 Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, computational electrodynamics, homogenization of effective media} \\
 \end{tabular}
 \egroup
-\thispagestyle{empty} \newpage ~ \thispagestyle{empty} \newpage \setcounter{page}{4}
+\thispagestyle{empty} \newpage  ~ \thispagestyle{empty} \newpage \setcounter{page}{1}
 
 % --------------------------------------------------------------------------------
-%\vspace{30mm}
-%\textbf{\huge{Abstrakt} }
-%\vspace{-5mm}
 
-%\begingroup \renewcommand{\newpage}{}
 \vspace{-20mm}
-\chapter*{Abstrakt}
+{\let\clearpage\relax\chapter*{Abstrakt}}
 \noindent 
 Při interakci elektromagnetických vln s periodickými strukturami lze pozorovat neobvyklé jevy, jako je záporný index lomu, fotonický zakázaný pás nebo silná prostorová disperze. Tyto struktury mohou být navrženy tak, aby se chovaly žá\-dou\-cím způsobem, a označují se buďto jako metamateriály nebo jako fotonické krystaly. Část z jejich navrhovaných využití je v technice terahertzových vln, kde můžou překlenout po\-měr\-ně slabé možnosti kla\-sických součástek.  
 
@@ -102,7 +98,8 @@ Srovnání  různých struktur si klade za cíl srozumitelnou formou prezentovat
 
 \vspace{0mm}
 
-\thispagestyle{empty} \newpage
+\thispagestyle{empty} \newpage ~ \thispagestyle{empty} \newpage \setcounter{page}{1}
+
 {\let\clearpage\relax\chapter*{Abstract}}
 \noindent
 Unusual phenomena such as negative index of refraction, photonic band gaps, or strong spatial dispersion are observed when electromagnetic waves interact with periodic structures. These can be designed to manipulate the wave in an advantageous way, and are known either as metamaterials or photonic crystals. Part of their proposed applications are for the terahertz technology, where they may address relatively poor performance of classical components.
@@ -119,16 +116,19 @@ Last but not least, the thesis demonstrates the capabilities of the simulation e
 %% + attention was focused to the parts of different topics, where the author's work could contribute with new knowledge
 %\endgroup
 
-\thispagestyle{empty} \newpage
+
+\thispagestyle{empty} \newpage ~ \thispagestyle{empty} \newpage \setcounter{page}{1}
 % --------------------------------------------------------------------------------
-\chapter*{Acknowledgements}
+
+{\let\clearpage\relax\chapter*{Acknowledgements}}
 Preparation of this thesis was not without difficulties. However, it appears that overcoming such difficulties is essential to gain some sort of valuable knowledge that can not be conveyed through textbooks, and of experience that can not be gained through straightforward and focused work only.  At the first place I wish to express thanks to my advisor, Dr. Filip Kadlec, and all other people who helped this project to be finished, namely Dr. Christelle Kadlec and doc. Petr Ku\v{z}el  from the Institute of Physics, and doc. Ivan Richter from the Faculty of Nuclear Engineering and Physical sciences, Czech Technical University. 
 
 Discussions with doc. Lukáš Jelínek and prof. Jan Macháč convinced me about the value in proper handling of the theoretical background, which later proved essential for explaining the results of the thesis. During my stay in France in 2013, the collaboration with Dr. Mathias Vanwolleghem not only greatly contributed to my experience with the numerical simulations, but presented also a great motivation for me. 
 
-Almost surprisingly, all my scientific aspirations found a permanent and selfless support of my wife and all family members, who always had patience with my focusing on abstract problems instead of the more practical aims and with my stubborn attitude towards some of their good advices.
+Almost surprisingly, all my scientific aspirations found a permanent and selfless support from all my family members, who always had patience with my focusing on abstract problems instead of the more practical aims and with my stubborn attitude towards some of their good advices.
 
 The numerical results presented in the thesis could be hardly obtained without the work of hundreds of volunteers contributing to the open-source scientific software: Most of the plots were made using the Matplotlib library \cite{hunter2007} and computations were based on MEEP \cite{oskooi2010meep} and MPB programs \cite{johnson2001mpb}. 
 
 This work was financially supported by the Czech Science Foundation under Grant No. 14-25639S.
-\thispagestyle{empty} \newpage ~ \thispagestyle{empty} \newpage 
+
+\thispagestyle{empty} \newpage ~ \thispagestyle{empty} \newpage \setcounter{page}{7}
