--- a/title.tex
+++ b/title.tex
@@ -88,13 +88,13 @@ Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, com
 \vspace{-20mm}
 {\let\clearpage\relax\chapter*{Abstrakt}}
 \noindent 
-Při interakci elektromagnetických vln s periodickými strukturami lze pozorovat neobvyklé jevy, jako je záporný index lomu, fotonický zakázaný pás nebo silná prostorová disperze. Tyto struktury mohou být navrženy tak, aby se chovaly žá\-dou\-cím způsobem, a označují se buďto jako metamateriály nebo jako fotonické krystaly. Část z jejich navrhovaných využití je v technice terahertzových vln, kde můžou překlenout po\-měr\-ně slabé možnosti kla\-sických součástek.  
+Při interakci elektromagnetických vln s periodickými strukturami lze pozorovat neobvyklé jevy, jako jsou záporný index lomu, fotonický zakázaný pás nebo silná prostorová disperze. Tyto struktury lze navrhnout navrhnout tak, aby se chovaly žá\-dou\-cím způsobem, a označují se bu\`dto jako metamateriály nebo jako foto\-nic\-ké krys\-taly. Část z jejich navrhovaných využití je v~technice terahertzových vln, kde můžou překlenout po\-měr\-ně slabé možnosti kla\-sických součástek.  
 
-Teoretický základ práce vychází z elektrodynamiky prostředí s frek\-ven\-ční dis\-per\-zí, která je dále zobecněna na prostředí s prostorovou disperzí a na Blochovu-Floquetovu teorii vln v periodických strukturách. Závěr teoretické části se pokouší vyjasnit pojmy používané v literatuře a ukázat, že myšlenky metamateriálů i fotonických krystalů jsou ve skutečnosti starší, než se často uvádí.
+Teoretický základ práce vychází z elektrodynamiky prostředí s frek\-ven\-ční dis\-per\-zí, která je dále zobecněna na prostředí s prostorovou disperzí a na Blochovu-Floquetovu teorii vln v~periodických strukturách. Závěr teoretické části se pokouší vyjasnit pojmy používané v~literatuře a ukázat, že myšlenky metamateriálů i fotonických krystalů jsou ve skutečnosti starší, než se často uvádí.
 
-Obecná teorie je doplněna příklady terahertzového chování různorodých periodických struktur, které bylo vypočteno metodou konečných diferencí v časové doméně (FDTD). V některých případech byly její výsledky podloženy jinými simulačními algoritmy nebo měřeními pomocí terahertzové spektroskopie v časové doméně.
+Obecná teorie je doplněna příklady terahertzového chování různorodých periodických struktur, které bylo vypočteno metodou konečných diferencí v~časové doméně (FDTD). V~některých případech byly její výsledky podloženy jinými simulačními algoritmy nebo měřeními pomocí terahertzové spektroskopie v~časové doméně.
 
-Srovnání  různých struktur si klade za cíl srozumitelnou formou prezentovat a vy\-svět\-lit nej\-pod\-stat\-něj\-ší principy. Podobné srov\-nání zřejmě v dosavadní literatuře chy\-bě\-lo. Klíčové vý\-sledky spočí\-vají v popisu přechodu mezi režimy metamateriálu a fotonického krystalu v periodickém poli dielektrických tyčinek a v důkazech toho, že k popisu chování řady uvedených struktur je zcela nezbytné uvažovat prostorovou dispersi. V neposlední řadě práce dokládá možnosti simulačních skriptů, které autor vyvinul a uveřejnil na internetu s úmyslem podpořit další výzkum v této oblasti. 
+Srovnání  různých struktur si klade za cíl srozumitelnou formou prezentovat a vy\-svět\-lit nej\-pod\-stat\-něj\-ší principy. Podobné srov\-nání zřejmě v~dosavadní literatuře chy\-bě\-lo. Klíčové vý\-sledky spočí\-vají v~popisu přechodu mezi režimy metamateriálu a fotonického krystalu v~periodickém poli dielektrických tyčinek a v~důkazech toho, že k popisu chování řady uvedených struktur je zcela nezbytné uvažovat prostorovou dispersi. V~neposlední řadě práce dokládá možnosti simulačních skriptů, které autor vyvinul a uveřejnil na internetu s úmyslem podpořit další výzkum v~této oblasti. 
 
 \vspace{0mm}
 
@@ -121,7 +121,7 @@ Last but not least, the thesis demonstrates the capabilities of the simulation e
 % --------------------------------------------------------------------------------
 
 {\let\clearpage\relax\chapter*{Acknowledgements}}
-Preparation of this thesis was not without difficulties. However, it appears that overcoming such difficulties is essential to gain some sort of valuable knowledge that can not be conveyed through textbooks, and of experience that can not be gained through straightforward and focused work only.  At the first place I wish to express thanks to my advisor, Dr. Filip Kadlec, and all other people who helped this project to be finished, namely Dr. Christelle Kadlec and doc. Petr Ku\v{z}el  from the Institute of Physics, and doc. Ivan Richter from the Faculty of Nuclear Engineering and Physical sciences, Czech Technical University. 
+Preparation of this thesis was not without difficulties. However, it appears that overcoming such difficulties is essential to gain some sort of valuable knowledge that can not be conveyed through textbooks, and of experience that can not be gained through straightforward and focused work only.  At the first place I wish to express thanks to my advisor, Dr. Filip Kadlec, and all other people who helped this project to be finished, namely Dr. Christelle Kadlec and doc. Petr Ku\v{z}el  from the Institute of Physics, and doc. Ivan Richter from the Faculty of Nuclear Engineering and Physical Sciences, Czech Technical University. 
 
 Discussions with doc. Lukáš Jelínek and prof. Jan Macháč convinced me about the value in proper handling of the theoretical background, which later proved essential for explaining the results of the thesis. During my stay in France in 2013, the collaboration with Dr. Mathias Vanwolleghem not only greatly contributed to my experience with the numerical simulations, but presented also a great motivation for me. 
 
