--- a/intro.tex
+++ b/intro.tex
@@ -7,15 +7,15 @@ The scientific community started to rigorously study the underlying phenomena in
 Simultaneous theoretical and technological progress through the 20th century allowed to design custom structures that interact with electromagnetic waves in a desired way. In analogy with the rapidly growing field of \textit{electronics}, the term of \textit{photonics} was coined for the design of optical fibers and other waveguides, sources, filters, detectors etc. The rapid development in this field was enabled by the modern technology of microfabrication, along with the unprecedented power of computers used for numerical simulations. Nowadays, photonics-based devices play a vital role in the high-bandwidth telecommunication, science and industry.
 
 %Electromagnetic phenomena in periodic structures were studied in analogy with the physical theories established previously % outside optics. 
-Out of all structures studied in photonics, particularly detailed theoretical studies were devoted to structures that are periodic. Three paradigms related to the physics of periodic structures developed independently. While \textit{photonic crystals} were inspired by the electron waves, \textit{metamaterials} were inspired by the electromagnetic waves in crystals. Early treatises on electrodynamics of \textit{media with negative or unusual parameters} did not assume any structuring or other way of how these parameters should be achieved. On behalf of natural development, the paradigms unified into one, and this thesis tries to describe them in an unified manner.  % todo style
+Out of all structures studied in photonics, particularly detailed theoretical studies were devoted to structures that are periodic. Three paradigms related to the physics of periodic structures developed independently. While \textit{photonic crystals} were inspired by the electron waves, \textit{metamaterials} were inspired by the electromagnetic waves in crystals. Early treatises on electrodynamics of \textit{media with negative or unusual parameters} did not assume any structuring or other way of how these parameters should be achieved. As a result of a natural development, the paradigms unified into one, and this thesis tries to describe them in an unified manner.  % todo style
 
 The essential concept is that the electromagnetic properties of a periodic structure can be, at least partially, understood as those of a homogeneous medium, but in fact they are determined predominantly by the spatial arrangement of the structure's unit cell. The actual constituent materials can be relatively freely chosen. While it is unlikely that a radically new homogeneous material will be invented for construction of optical elements, periodic structuring of ordinary materials provides unprecedented freedom in tuning the electromagnetic properties and even enables to obtain phenomena unusual in homogeneous materials.  % todo style
 
 %}}}
 \section{Motivation for terahertz photonics} %{{{
-This work focuses on the electromagnetic behaviour of periodic structures operating in the terahertz (THz) spectral range, which spans roughly from 100 GHz to 10 THz. While the electrodynamic theory presented in this work is scale-invariant and can be used in the whole electromagnetic spectrum, the selected frequency range defines the properties of constituent materials and technological processes available. Compared to the well established optical technology (400---700 THz), the range of materials suitable for THz frequencies gives additional possibilities, such as the use of superconductors, extremely high-permittivity dielectrics and tunable ferroelectrics. Additionally, the much longer wavelength of terahertz waves, e.g. 300 $\upmu$m for 1 THz in free space, also enables much easier fabrication of relevant structures. On the other hand, materials such as glass and most plastics, commonly used in other spectral ranges, must be avoided, since they exhibit excessively high losses in the terahertz range.
+This work focuses on the electromagnetic behaviour of periodic structures operating in the terahertz (THz) spectral range, which spans roughly from 100 GHz to 10 THz. While the electrodynamic theory presented in this work is scale-invariant and can be used in the whole electromagnetic spectrum, the selected frequency range defines the properties of available constituent materials and technological processes. Compared to the well established optical technology (400---700 THz), the range of materials suitable for THz frequencies gives additional possibilities, such as the use of superconductors, extremely high-permittivity dielectrics and tunable ferroelectrics. Additionally, the much longer wavelength of terahertz waves, e.g. 300 $\upmu$m for 1 THz in free space, also enables much easier fabrication of relevant structures. On the other hand, materials such as glass and most plastics, commonly used in other spectral ranges, must be avoided, since they exhibit excessively high losses in the terahertz range.
 
-The terahertz range is located in the electromagnetic spectrum at the boundary between the microwave region where most often the approaches of high-frequency electronics is used, and the infrared and optical region where classical optics is used \cite{ozyuzer2007emission}. At THz frequencies, both approaches are often seamlessly used together: waves emitted from lumped semiconductor components can be collimated by lenses, picosecond pulses generated in nonlinear crystals can be detected by photoconductive sampling, etc.  %% TODO - maybe write examples that are better covered by the use of MMs or PhCs
+The terahertz range is located in the electromagnetic spectrum at the boundary between the microwave region where most often the approaches of high-frequency electronics are used, and the infrared and optical region where the classical optics is used \cite{ozyuzer2007emission}. At THz frequencies, both approaches are often seamlessly used together: waves emitted from lumped semiconductor components can be collimated by lenses, picosecond pulses generated in nonlinear crystals can be detected by photoconductive sampling, etc.  %% TODO - maybe write examples that are better covered by the use of MMs or PhCs
 
 Yet none of these two approaches is optimal for the THz applications; from the electronic point of view, there is still demand for fast-enough semiconductor devices and also the microstrip circuits become too lossy at high frequencies. The optical approach is often burdened by the strong wave-optics phenomena such as diffraction, and moreover some light-matter interactions are weaker than at the optical frequencies, limiting the possibilities for e.g. amplitude modulation by the Pockels effect. 
 
@@ -25,7 +25,7 @@ These deficiencies provide additional reasons to search for the new possibilitie
 
 \section{Goals of the thesis}%{{{
 \begin{enumerate}
-\item{During the preparation of the thesis, its author encountered difficulties finding a focused, accessible, yet rigorous enough tutorial covering the necessary theory. The main aim of the theoretical section therefore lies in bridging the fundamental electrodynamics with the concepts used for description of metamaterials and photonic crystals.} 
+\item{During the preparation of the thesis, its author encountered difficulties finding a focused, accessible, yet rigorous enough tutorial covering the necessary theory. The main aim of the theoretical section therefore lies in bridging the fundamental electrodynamics with the concepts used for the description of metamaterials and photonic crystals.} 
 \item{The importance of the more general \textit{spatially-dispersive} electrodynamics is emphasized, although it is unfortunately often neglected in the literature in favor of the simpler \textit{local} electrodynamics. Both approaches are compared throughout the thesis.} 
 \item{The third aim of this thesis is to promote the unification of paradigms, i.e. \textit{photonic crystals}, \textit{metamaterials} and \textit{media of unusual parameters}, by showing that they can -- and should -- be described by the same theoretical approaches. This is supported by elaborating the concept of spatial dispersion in the theoretical section and by providing historical review of the surprisingly long parallel development of such structures.} 
 \item{A overview of the electromagnetic behaviour of diverse periodic structures is provided in the Results section, taking into account also the properties of materials available for THz photonics, with the realistic level of absorption in particular. This section is more than just results -- proceeding from simpler structures to the more complex ones, it aims to explain all observed phenomena in a didactic manner. Some of the simulations are verified against the experimental results from the terahertz measurements.} 
