changed meter to metre

--- a/expe.tex
+++ b/expe.tex
@@ -110,10 +110,10 @@ Similar TiO$_{2}$ microspheres are also available commercially (e.g. from Brace,
 
 The annealed spheres were further treated with the aim to break or eliminate clusters, by means of light milling with agathe mortar, which was separated afterwards by ultrasound bath cleaning in ethanol. Pre-sieving was performed on commercial sieves with 100, 53, 50, 40 and 38 $\upmu$m size of the square hole, though these nominal parameters of sieves should be in no way understood as hard limits for the particle sizes. The procedure of milling, cleaning and sieving was repeated 2-3 times, according personal communication with Dr. Patrick Mounaix and {Dr.} U-Chan Chung.
 
-Only the low-temperature annealed samples were measured by the terahertz spectroscopy in this thesis. The fine-grained rutile was assumed to represent a nearly isotropic dielectric. We estimated the size of the constituent crystalline grains by grinding one microsphere and observing it under a polarizing microscope: unlike polycrystalline aggregates, small rutile monocrystals appear as coloured particles due to their inherent birefringence. In this way, the sizes of crystalline grains were assessed to be in the order of few micrometers or smaller.
+Only the low-temperature annealed samples were measured by the terahertz spectroscopy in this thesis. The fine-grained rutile was assumed to represent a nearly isotropic dielectric. We estimated the size of the constituent crystalline grains by grinding one microsphere and observing it under a polarizing microscope: unlike polycrystalline aggregates, small rutile monocrystals appear as coloured particles due to their inherent birefringence. In this way, the sizes of crystalline grains were assessed to be in the order of few micrometres or smaller.
 
 %\textit{
-%(\ldots) As the spheres have been sintered at high temperature, they have been separated from a platinum plate with a small soft paintbrush followed by a light milling with a agathe mortar. The goal was to separate the spheres that are welded to their neighbours due to the sintering step. All the spheres were treated in ultrasound bath using ethanol as a liquid phase. After natural drying, the sieving was performed. (\ldots) square (or rectangular) holes sieves were used. The meshes used were 106, 100, 53, 50, 40 and 38 micrometer. As a dry sieving step was performed, the particles were light milled again in order to try to break possible agglomerates which would not go through the mesh. This process was repeated 2-3 times and a final wet sieving with ethanol was performed in order to "wash" the spheres. No special measures were taken according to their shapes. (\ldots) } 
+%(\ldots) As the spheres have been sintered at high temperature, they have been separated from a platinum plate with a small soft paintbrush followed by a light milling with a agathe mortar. The goal was to separate the spheres that are welded to their neighbours due to the sintering step. All the spheres were treated in ultrasound bath using ethanol as a liquid phase. After natural drying, the sieving was performed. (\ldots) square (or rectangular) holes sieves were used. The meshes used were 106, 100, 53, 50, 40 and 38 micrometre. As a dry sieving step was performed, the particles were light milled again in order to try to break possible agglomerates which would not go through the mesh. This process was repeated 2-3 times and a final wet sieving with ethanol was performed in order to "wash" the spheres. No special measures were taken according to their shapes. (\ldots) } 
 % TODO
 
 
