--- a/result.tex
+++ b/result.tex
@@ -261,7 +261,7 @@ While the changes in the cut-wire radius $\rho_w$ relatively weakly influence th
 %}}}
 \paragraph{Experimental measurement of cut wire spectra}%{{{ 
 Although we did not fabricate any cut-wire metamaterial, we used the terahertz time-domain spectroscopy to characterise cut-wire-on-silicon structures, one representative of which is photographed and sketched in Fig. \ref{fg_bousek}. The metallic wires were deposited on a silicon substrate, and at their ends, the silicon was doped to form diode-like transitions. 
-\begin{figure}[ht] \caption[Microphotograph and the geometry of the cut-wire sample]{The sample of cut wires (pale yellow) on silicon (cyan) substrate. \textbf{(a)} Natural-colour photograph from an optical microscope,  \textbf{(b)} Geometry of the wires in micrometers. They were measured to be $6.5$ $\mu$m wide and $30$ $\mu$m long. The periodicity of cut-wires was $30\times 50$ $\mu$m.  } \label{fg_bousek} \centering 
+\begin{figure}[ht] \caption[Microphotograph and the geometry of the cut-wire sample]{The sample of cut wires (pale yellow) on silicon (cyan) substrate. \textbf{(a)} Natural-colour photograph from an optical microscope,  \textbf{(b)} Geometry of the wires in micrometres. They were measured to be $6.5$ $\mu$m wide and $30$ $\mu$m long. The periodicity of cut-wires was $30\times 50$ $\mu$m.  } \label{fg_bousek} \centering 
 \begin{overpic}[height=.40\textwidth]{img/bousek_splitwires_microphoto.pdf}  \put(0,78) {\textbf{(a)}} \end{overpic}\quad
 \begin{overpic}[height=.40\textwidth]{img/bousek_splitwires_drawing.pdf}  \put(0,95) {\textbf{(b)}} 
 		\put(55,0){\includegraphics[width=.12\textwidth]{img/tripletEKH.pdf}} % todo
@@ -571,7 +571,7 @@ The second resonance (Fig. \ref{fg_Mie}b) has an electric dipole moment. It is s
   \end{figure}
 
 An analytical theory of electromagnetic resonances in dielectric spheres (or rods) was developed by Mie in 1908 \cite{mie1908beitrage}, and correspondingly they are denoted as \textit{Mie resonances}\index{Mie resonances}. 
-Dielectric resonators operate in a similar way to a series L-C circuit, as was noticed by Richtmyer in 1939 \cite{richtmyer1939dielectric}. Few decades later, the dielectric resonator found its use in the developing microwave technology; usually it takes the form of a millimeter-sized ceramic disc glued to a microstrip circuits. 
+Dielectric resonators operate in a similar way to a series L-C circuit, as was noticed by Richtmyer in 1939 \cite{richtmyer1939dielectric}. Few decades later, the dielectric resonator found its use in the developing microwave technology; usually it takes the form of a millimetre-sized ceramic disc glued to a microstrip circuits. 
 
 The Mie theory describes the scattering from a single particle surrounded by vacuum, but for  high-permittivity dielectrics, the resonant fields are well confined in the dielectric volume and are not appreciably affected by the presence of the neighbouring cells, so the Mie theory remains applicable.
 
@@ -655,7 +655,7 @@ When the ellipsoid axes have a general orientation with regard to their cubic la
 
 %}}}
 \begin{figure}[t]  % fg_spherewire_sketch%{{{
-	\caption[Drawings of the sphere array in the wire grid]{Sketch of the sphere array embedded in the wire grid. \textbf{(a)} Front view of the simulated structure, \textbf{(b)} the experimental structure used in Ref. \cite{yakiyama2012terahertz}, measures are in micrometers. \textbf{(c)} and \textbf{(d)} top views of the corresponding structures} \label{fg_spherewire_sketch} \centering 
+	\caption[Drawings of the sphere array in the wire grid]{Sketch of the sphere array embedded in the wire grid. \textbf{(a)} Front view of the simulated structure, \textbf{(b)} the experimental structure used in Ref. \cite{yakiyama2012terahertz}, measures are in micrometres. \textbf{(c)} and \textbf{(d)} top views of the corresponding structures} \label{fg_spherewire_sketch} \centering 
 \begin{overpic}[width=0.30\textwidth]{img/SphereWire_num_xy.pdf} \put (1,81) {\textbf{(a)}}\end{overpic}\quad
 \begin{overpic}[width=0.30\textwidth]{img/SphereWire_expe_xy.pdf}  \put (1,81) {\textbf{(b)}}
 		\put(100,30){\includegraphics[width=.12\textwidth]{img/tripletEKH.pdf}}
