--- a/intro.tex
+++ b/intro.tex
@@ -15,7 +15,7 @@ The essential concept is that the electromagnetic properties of a periodic struc
 \section{Motivation for terahertz photonics} %{{{
 This work focuses on the electromagnetic behaviour of periodic structures operating in the terahertz (THz) spectral range, which spans roughly from 100 GHz to 10 THz. While the electrodynamic theory presented in this work is scale-invariant and can be used in the whole electromagnetic spectrum, the selected frequency range defines the properties of available constituent materials and technological processes. Compared to the well established optical technology (400---700 THz), the range of materials suitable for THz frequencies gives additional possibilities, such as the use of superconductors, extremely high-permittivity dielectrics and tunable ferroelectrics. Additionally, the much longer wavelength of terahertz waves, e.g. 300 $\upmu$m for 1 THz in free space, also enables much easier fabrication of relevant structures. On the other hand, materials such as glass and most plastics, commonly used in other spectral ranges, must be avoided, since they exhibit excessively high losses in the terahertz range.
 
-The terahertz range is located in the electromagnetic spectrum at the boundary between the microwave region where most often the approaches of high-frequency electronics are used, and the infrared and optical region where the classical optics is used \cite{ozyuzer2007emission}. At THz frequencies, both approaches are often seamlessly used together: waves emitted from lumped semiconductor components can be collimated by lenses, picosecond pulses generated in nonlinear crystals can be detected by photoconductive sampling, etc.  %% TODO - maybe write examples that are better covered by the use of MMs or PhCs
+The terahertz range is located in the electromagnetic spectrum at the boundary between the microwave region where most often the approaches of high-frequency electronics are used, and the infrared and optical region where the classical optics is used \cite{ozyuzer2007emission}. At THz frequencies, both approaches are often seamlessly used together: waves emitted from lumped semiconductor components can be collimated by lenses, picosecond pulses generated in nonlinear crystals can be detected by photoconductive sampling, etc.  
 
 Yet none of these two approaches is optimal for the THz applications; from the electronic point of view, there is still demand for fast-enough semiconductor devices and also the microstrip circuits become too lossy at high frequencies. The optical approach is often burdened by the strong wave-optics phenomena such as diffraction, and moreover some light-matter interactions are weaker than at the optical frequencies, limiting the possibilities for e.g. amplitude modulation by the Pockels effect. 
 
@@ -25,8 +25,8 @@ These deficiencies provide additional reasons to search for the new possibilitie
 
 \section{Goals of the thesis}%{{{
 \begin{enumerate}
-\item{During the preparation of the thesis, its author encountered difficulties finding a focused, accessible, yet rigorous enough tutorial covering the necessary theory. The main aim of the theoretical section therefore lies in bridging the fundamental electrodynamics with the concepts used for the description of metamaterials and photonic crystals.} 
-\item{The importance of the more general \textit{spatially-dispersive} electrodynamics is emphasized, although it is unfortunately often neglected in the literature in favor of the simpler \textit{local} electrodynamics. Both approaches are compared throughout the thesis.} 
+\item{During the preparation of the thesis, its author encountered difficulties finding a focused, accessible, yet rigorous enough tutorial covering the necessary theory. The main aim of the theoretical section therefore lies in bridging the fundamental electrodynamics with the concepts used for a description of metamaterials and photonic crystals.} 
+\item{The importance of the more general \textit{spatially-dispersive} electrodynamics is emphasized, although it is unfortunately often neglected in the literature in favour of the simpler \textit{local} electrodynamics. Both approaches are compared throughout the thesis.} 
 \item{The third aim of this thesis is to promote the unification of paradigms, i.e. \textit{photonic crystals}, \textit{metamaterials} and \textit{media of unusual parameters}, by showing that they can -- and should -- be described by the same theoretical approaches. This is supported by elaborating the concept of spatial dispersion in the theoretical section and by providing historical review of the surprisingly long parallel development of such structures.} 
 \item{A overview of the electromagnetic behaviour of diverse periodic structures is provided in the Results section, taking into account also the properties of materials available for THz photonics, with the realistic level of absorption in particular. This section is more than just results -- proceeding from simpler structures to the more complex ones, it aims to explain all observed phenomena in a didactic manner. Some of the simulations are verified against the experimental results from the terahertz measurements.} 
 \item{Last but not least, the numerical results present a small demonstration of the use of the extensive simulation scripts, which were developed solely for the thesis and are published online free of charge. The basic concepts of the numerical simulations are described to help others in adapting the simulations for their further research. } 
@@ -104,7 +104,7 @@ In the real world, observable fields do not have any imaginary component so the 
 In the $e^{+\ii\omega t}$ convention, many parameters of a passive (lossy) system are restricted to have \textit{negative imaginary part}. An additional complication arises from that a part of the authors using $e^{+\ii\omega t}$ convention still wish to represent the imaginary part as \textit{positive}, and they define complex quantities as, e.g., $\varepsilon = \varepsilon' - \ii \varepsilon''$, % TODO verify if this is e.g. "Wallen2011-Anti-resonant response of ..."
 thus in their case $\varepsilon''\equiv -\text{Im}(\varepsilon)$. This is not the case of this thesis, and the real and imaginary parts are represented naturally as $\varepsilon := \varepsilon' + \ii \varepsilon''$.
 
-The unit system differs across the literature, too. Some of the references, e.g. \cite{landau1984electrodynamics, agranovich2006spatial, krowne2007book_agran} use the older centimeter-gram-second (CGS) system, which for instance leaves out the dimension constants of $\varepsilon_0, \mu_0$. The whole thesis uses consistently the meter-kilogram-second (SI) system.
+The unit system differs across the literature, too. Some of the references, e.g. \cite{landau1984electrodynamics, agranovich2006spatial, krowne2007book_agran} use the older centimetre-gram-second (CGS) system, which for instance leaves out the dimension constants of $\varepsilon_0, \mu_0$. The whole thesis uses consistently the metre-kilogram-second (SI) system.
 
 Having listed conventions we use, we should mention one convention we will avoid using. The term \textit{transverse-magnetic} (TM, or equivalently, \textit{p-polarized}) wave has its established meaning for oblique incidence on a homogeneous interface: it means that the magnetic field is perpendicular to the plane of incidence, and thus always parallel to the interface. The term \textit{transverse-electric} (TE, or, \textit{s-polarized}) denotes the opposite situation. 
 
